--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
+    "react-player": "^3.1.0",
     "react-router-dom": "^7.6.2"
-   
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
